# pkg-tflite-micro

./: .gitignore  CMakeLists.txt  libfrontend.pc  pkg-tflite-micro.code-workspace
.github/workflows/: release.yml
frontend/include/frontend/: bits.h  fft_io.h  filterbank_io.h  noise_reduction_io.h
frontend/src/: fft.cc  fft_test.cc  fft_util.cc  filterbank_test.cc  frontend_main.c  frontend_memmap_generator.c  frontend_test.cc  log_scale_test.cc  micro_features_generator.cc  pcan_gain_control_test.cc  window_util.c
libtflite-new/: tflite-micro.pc
libtflite-new/examples/hello_world/: CMakeLists.txt
libtflite-new/frontend/: CMakeLists.txt
libtflite-new/frontend/include/frontend/: frontend_io.h  log_scale_io.h  window_io.h
libtflite-new/frontend/src/: filterbank_io.c  filterbank_util.c  noise_reduction_io.c  noise_reduction_test.cc  window_io.c  window_test.cc
libtflite-new/signal/src/: irfft_float.cc  irfft_int16.cc  irfft_int32.cc  rfft_float.cc  rfft_int32.cc
libtflite-new/tensorflow/lite/core/api/: flatbuffer_conversions.h
libtflite-new/tensorflow/lite/micro/: compatibility.h
signal/src/: rfft_int16.cc
tensorflow/lite/micro/: micro_mutable_op_resolver.h
